// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeedbackEntry EDITING state should render editing state snapshot 1`] = `
<body>
  <div>
    <div
      class="css-1hhgau3"
    >
      <div
        class="vote-buttons"
      >
        <button
          class="vote-tile-btn agree-active"
        >
          <span
            class="vote-btn-icon"
          >
            <svg
              color="currentColor"
              height="22"
              viewBox="0 0 1024 1024"
              width="22"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M398.495 365.118c138.97-76.823 29.377-272.875 156.586-280.923C742.605 92.84 655.198 384 655.198 384h117.454c82.783 0 132.925 64.723 112.547 144.562l-67.237 263.425c-11.69 45.8-59.225 82.68-106.25 82.68H448.134c-14.269 0-27.891-2.8-40.343-7.879C384 853.813 384 830.741 384 830.741V401.324s.758-25.168 14.495-36.206M304.19 874.667h-77.18c-35.281 0-66.2-28.501-69.058-63.643l-29.553-363.38C125.54 412.493 151.875 384 187.013 384h117.816c38.863 3.295 36.504 37.732 36.504 37.732v421.12s2.068 28.046-37.143 31.815"
                fill="currentColor"
              />
            </svg>
          </span>
          <span
            class="vote-btn-text"
          >
            通过
          </span>
        </button>
        <button
          class="vote-tile-btn "
        >
          <span
            class="vote-btn-icon"
          >
            <svg
              color="currentColor"
              height="22"
              viewBox="0 0 16 16"
              width="22"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 14.667A6.666 6.666 0 1 1 8 1.334a6.666 6.666 0 0 1 0 13.333m0-1.334A5.333 5.333 0 1 0 8 2.667a5.333 5.333 0 0 0 0 10.666m0-6.276 1.885-1.886.944.944L8.943 8l1.886 1.885-.944.944L8 8.943l-1.885 1.886-.944-.944L7.057 8 5.171 6.115l.944-.944z"
                fill="currentColor"
              />
            </svg>
          </span>
          <span
            class="vote-btn-text"
          >
            不行
          </span>
        </button>
      </div>
      <div
        class="reason-area"
      >
        <textarea
          class="ant-input basic-input-wrapper css-1pd1cd5"
          placeholder="请输入备注（可选）"
          rows="3"
          style="margin-bottom: 8px;"
        />
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
            style="margin-right: 8px;"
          >
            <button
              class="ant-btn ant-btn-primary ant-btn-sm basic-button-wrapper css-10ae2zl"
              type="button"
            >
              <span>
                保 存
              </span>
            </button>
          </div>
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn ant-btn-default ant-btn-sm basic-button-wrapper css-10ae2zl"
              type="button"
            >
              <span>
                取 消
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`FeedbackEntry INITIAL state should render vote buttons in initial state 1`] = `
<body>
  <div>
    <div
      class="css-1hhgau3"
    >
      <div
        class="vote-buttons"
      >
        <button
          class="vote-tile-btn "
        >
          <span
            class="vote-btn-icon"
          >
            <svg
              color="currentColor"
              height="22"
              viewBox="0 0 1024 1024"
              width="22"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M398.495 365.118c138.97-76.823 29.377-272.875 156.586-280.923C742.605 92.84 655.198 384 655.198 384h117.454c82.783 0 132.925 64.723 112.547 144.562l-67.237 263.425c-11.69 45.8-59.225 82.68-106.25 82.68H448.134c-14.269 0-27.891-2.8-40.343-7.879C384 853.813 384 830.741 384 830.741V401.324s.758-25.168 14.495-36.206M304.19 874.667h-77.18c-35.281 0-66.2-28.501-69.058-63.643l-29.553-363.38C125.54 412.493 151.875 384 187.013 384h117.816c38.863 3.295 36.504 37.732 36.504 37.732v421.12s2.068 28.046-37.143 31.815"
                fill="currentColor"
              />
            </svg>
          </span>
          <span
            class="vote-btn-text"
          >
            通过
          </span>
        </button>
        <button
          class="vote-tile-btn "
        >
          <span
            class="vote-btn-icon"
          >
            <svg
              color="currentColor"
              height="22"
              viewBox="0 0 16 16"
              width="22"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 14.667A6.666 6.666 0 1 1 8 1.334a6.666 6.666 0 0 1 0 13.333m0-1.334A5.333 5.333 0 1 0 8 2.667a5.333 5.333 0 0 0 0 10.666m0-6.276 1.885-1.886.944.944L8.943 8l1.886 1.885-.944.944L8 8.943l-1.885 1.886-.944-.944L7.057 8 5.171 6.115l.944-.944z"
                fill="currentColor"
              />
            </svg>
          </span>
          <span
            class="vote-btn-text"
          >
            不行
          </span>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`FeedbackEntry SUBMITTED state should render submitted view with agree vote 1`] = `
<body>
  <div>
    <div
      class="css-1hhgau3"
    >
      <div
        class="submitted-view agree"
      >
        <div
          class="submitted-header"
        >
          <span
            class="vote-icon"
          >
            <svg
              color="currentColor"
              height="16"
              viewBox="0 0 20 20"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 18.333a8.333 8.333 0 1 1 0-16.666 8.333 8.333 0 1 1 0 16.666m-.83-5 5.89-5.892-1.177-1.178-4.714 4.714-2.357-2.358-1.179 1.179z"
                fill="currentColor"
              />
            </svg>
          </span>
          <span
            class="vote-label agree"
          >
            通过
          </span>
          <button
            class="re-edit-btn"
          >
            <svg
              color="currentColor"
              height="14"
              viewBox="0 0 16 16"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
        <div
          class="submitted-reason"
        >
          优化效果明显
        </div>
        <div
          class="submitted-time"
        >
          <span
            class="time-icon"
          >
            <svg
              color="currentColor"
              height="11"
              viewBox="0 0 18 18"
              width="11"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9 16.5a7.5 7.5 0 1 1 0-15 7.5 7.5 0 0 1 0 15M9 15A6 6 0 1 0 9 3a6 6 0 0 0 0 12m.75-6h3v1.5h-4.5V5.25h1.5z"
                fill="currentColor"
              />
            </svg>
          </span>
          2024-04-17 11:33:09
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`FeedbackEntry SUBMITTED state should render submitted view with disagree vote 1`] = `
<body>
  <div>
    <div
      class="css-1hhgau3"
    >
      <div
        class="submitted-view disagree"
      >
        <div
          class="submitted-header"
        >
          <span
            class="vote-icon"
          >
            <svg
              color="currentColor"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 14.667A6.666 6.666 0 1 1 8 1.334a6.666 6.666 0 0 1 0 13.333m0-1.334A5.333 5.333 0 1 0 8 2.667a5.333 5.333 0 0 0 0 10.666m0-6.276 1.885-1.886.944.944L8.943 8l1.886 1.885-.944.944L8 8.943l-1.885 1.886-.944-.944L7.057 8 5.171 6.115l.944-.944z"
                fill="currentColor"
              />
            </svg>
          </span>
          <span
            class="vote-label disagree"
          >
            不行
          </span>
          <button
            class="re-edit-btn"
          >
            <svg
              color="currentColor"
              height="14"
              viewBox="0 0 16 16"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
        <div
          class="submitted-reason"
        >
          性能提升不明显
        </div>
        <div
          class="submitted-time"
        >
          <span
            class="time-icon"
          >
            <svg
              color="currentColor"
              height="11"
              viewBox="0 0 18 18"
              width="11"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9 16.5a7.5 7.5 0 1 1 0-15 7.5 7.5 0 0 1 0 15M9 15A6 6 0 1 0 9 3a6 6 0 0 0 0 12m.75-6h3v1.5h-4.5V5.25h1.5z"
                fill="currentColor"
              />
            </svg>
          </span>
          2024-04-16 18:00:00
        </div>
      </div>
    </div>
  </div>
</body>
`;
